exercise-3.2/log-output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: exercise-3-2
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output
                port:
                  number: 3000
